--- a/ebay.ipynb
+++ b/ebay.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this file is just to connect to the ebay API to request all the images related to searches. mainly a way to gather more images of certain types of items"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
