--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -53,6 +53,15 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train the model\n",
     "for epoch in range(10):  # Number of epochs\n",
     "    model.train()\n",
@@ -64,8 +73,15 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        running_loss += loss.item()\n",
-    "    print(f\"Epoch {epoch+1}, Loss: {running_loss/len(train_loader)}\")\n",
-    "\n",
+    "    print(f\"Epoch {epoch+1}, Loss: {running_loss/len(train_loader)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Evaluate the model\n",
     "model.eval()\n",
     "correct = 0\n",
